<resources>
    <string name="app_name">Task Trackr</string>
    <string name="sBtn">Start</string>
    <string name="welcome">Today Works</string>
    <string name="add">Add Task</string>
    <string name="title">Title</string>
    <string name="dis">Description</string>
    <string name="date">Date</string>
    <string name="newT">New Task</string>
    <string name="enterT">Enter the Task Title</string>
    <string name="enterD">Enter the Task Description</string>
    <string name="save">Save Task</string>
    <string name="updateT">Update Task</string>
    <string name="update">Update Task</string>
    <string name="load">Loading</string>
    <string name="search">Enter Search</string>
    <string name="des">Effortlessly manage tasks with Task Trackr</string>
</resources>