<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgoundpic"
    android:maxWidth="200dp"
    tools:context=".GameActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_anchor="@+id/linearLayout"
            app:layout_anchorGravity="top|center" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addSearch"
            style="Widget.App.SearchInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            android:textColorHint="@color/black"
            android:layout_marginHorizontal="10dp"

            app:errorEnabled="false"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edTkTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"

                android:background="@drawable/purple_border"/>
        </com.google.android.material.textfield.TextInputLayout>




        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/task"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="100dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/view_task_layout"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/black"
        android:id="@+id/addTaskFABtn"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:icon="@drawable/baseline_add_24"
        app:iconSize="23dp"
        app:iconTint="@color/white"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>